refactor(blog): simplify 2025 year in review to match raw source
Strip MDX to only contain content from the raw txt source file.
Remove detailed subsections, extra paragraphs, and links that were
not in the original draft. Sections now have placeholder content
for Donations and Outlook ending.

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -21,7 +21,7 @@ the not-so-obvious part. Let's do the obvious first: Nation states hold BTC on
 their balance sheets. Serious people with serious suites and serious companies
 talk about it on TV, in a non-dismissive (serious) way. If you bring it up in
 conversation you don't get laughed out of the room anymore. While most people
-have heard of bitcoin by now, it is probably fair to say that for the vast
+have heard of bitcoin by now, it is probably fair to say to that for the vast
 majority contact was peripheral and understanding superficial. Consequently,
 only a small percentage use it in a self-sovereign way. In absolute terms,
 however, the number is growing. The mainstream association now seems to be
@@ -29,7 +29,7 @@ squarely in the "asset" and "digital gold" quadrant, as opposed to "speculation"
 a couple of years ago, or gambling and shady internet money used exclusively for
 questionable things before that.
 
-Now to the not-so-obvious part: Bitcoin is still alive. It has operated for
+Now to the not-so-obvious part: Bitcoin is still alive. It has operated since
 seventeen years, mostly quietly, mostly in the background. A new block has been
 mined every 10 minutes. Over 900,000 blocks since genesis, moving trillions of
 sats in the process. The cumulative hash rate of the network is at an all-time
@@ -44,7 +44,7 @@ funding a myriad of efforts across the stack to support Bitcoin through its
 teenage years.
 
 Over the last 18 months we've sent roughly \$1,000,000 USD worth of sats to
-grantees in 40+ countries, every month. During the course of 2025 we supported
+grantees in 40+ countries, every month. During the course of 2015 we supported
 more than 150 active grantees at any point in time: small teams, large teams,
 educational efforts, and—most importantly—individual developers.
 
@@ -78,71 +78,57 @@ and people. At the same time, we want to avoid wasting donor funds, which is why
 we keep a close eye on our grantees to make sure that progress goals and agreed
 upon milestones are hit. And last but not least, we are spending our time on
 long-term donor relationships and fundraising efforts. After all, we can only
-support as many grantees as we do if there are sats in our vaults.
+support as many grantees as we support if there's sats in our vaults.
 
 We announce all our grants publicly on our blog, along with our initiatives and
 noteworthy donations. Looking at the announcements made in 2025 one should get a
-pretty good idea of what we've been up to: In January 2025 we announced
-[additional grants for Bitcoin Core contributors](/blog/more-for-core), followed
-by a [wave of bitcoin grants](/blog/ninth-wave-of-bitcoin-grants) announced
-shortly after. In February we published our first impact report: [Advancements
-in On-Chain Privacy](/blog/developing-advancements-in-onchain-privacy). In March
-we announced the [10th wave of grants](/blog/tenth-wave-of-bitcoin-grants) from
-the General Fund as well as the [10th wave of grants](/blog/10th-wave-of-nostr-grants)
-from The Nostr Fund. We also published "[Let a Thousand Flowers
-Bloom](/blog/let-a-thousand-flowers-bloom)," outlining our thesis on how to best
-scale OpenSats horizontally.
+pretty good idea of what we've been up to: In January 2025 we've announced
+additional grants for bitcoin core contributors, followed by a wave of bitcoin
+grants announced shortly after. In February we published our first impact
+report: Advancements in On-Chain Privacy. In March we announced the 10th wave of
+grants from the General Fund as well as the 10th wave of grants from The Nostr
+Fund. We also published "Let a Thousand Flowers Bloom", outlining our thesis on
+how to best scale OpenSats horizontally.
 
-In April we announced our [4th wave of education
-grants](/blog/fourth-wave-of-education-grants), followed by [another wave of
-nostr grants](/blog/eleventh-wave-of-nostr-grants) and our next impact report:
-[Advancements in Lightning Infrastructure](/blog/advancements-in-lightning-infrastructure).
-In May we announced yet [another wave of grants](/blog/eleventh-wave-of-bitcoin-grants)
-(and grant renewals) from our General Fund.
+In April we announced our 4th wave of education grants, followed by another wave
+of nostr grants and our next impact report: Advancements in Lightning
+Infrastructure. In May we announced yet another wave of grants (and grant
+renewals) from our General Fund.
 
-June marked the release of our third impact report, [Advancements in Developer
-Training](/blog/advancements-in-developer-training), highlighting progress of
-some of the developer-focused education initiatives we fund: Summer of Bitcoin,
-Africa Free Routing, Bitcoin Dev Launchpad, and Bitshala. We also announced our
-long-term support for [SnowCait](/blog/snowcait-receives-lts-grant), a prolific
-nostr developer. In July we announced the [12th wave of
-grants](/blog/twelfth-wave-of-bitcoin-grants) from the General Fund as well as
-[The Nostr Fund](/blog/twelfth-wave-of-nostr-grants), respectively.
+June marked the release of our third impact report, Advancements in Developer
+Training, highlighting progress of some of the developer-focused education
+initiatives we fund. Summer of Bitcoin, Africa Free Routing, Bitcoin Dev
+Launchpad, and Bitshala. We also announced our long-term support for SnowCait, a
+prolific nostr developer. In July we announced the 12th wave of grants from the
+General Fund as well as the Nostr Fund, respectively.
 
-![](/static/images/blog/2025-eoy/2025-lts.png)
+In August we published yet another impact report: Advancements in Developer
+Libraries. We fund a lot of projects that are by their very nature invisible to
+the end-user. Software development kits and libraries that a myriad of projects
+depend upon. BDK, `rust-bitcoin`, Payjoin Dev Kit, DLC Dev Kit, libraries
+focused on `secp256k1`, and many others. Developing and maintaining these
+libraries is hard and often thankless, but paramount to a flourishing bitcoin
+ecosystem. As one of our grantees Tobin Harding succinctly put it: "My job is to
+provide libraries so other devs can create software that users love. If no one
+ever mentions rust-bitcoin while simultaneously using it every day, then we
+win." Our 13th wave of grants, also announced in August, showed our commitment
+to those infrastructure-like software projects: Tor, DTails, and `ngx_L402` are
+all puzzle pieces to the larger freedom tech picture.
 
-In August we published yet another impact report: [Advancements in Developer
-Libraries](/blog/advancements-in-developer-libraries). We fund a lot of projects
-that are by their very nature invisible to the end-user. Software development
-kits and libraries that a myriad of projects depend upon. BDK, `rust-bitcoin`,
-Payjoin Dev Kit, DLC Dev Kit, libraries focused on `secp256k1`, and many others.
-Developing and maintaining these libraries is hard and often thankless, but
-paramount to a flourishing bitcoin ecosystem. As one of our grantees Tobin
-Harding succinctly put it: "My job is to provide libraries so other devs can
-create software that users love. If no one ever mentions rust-bitcoin while
-simultaneously using it every day, then we win." Our [13th wave of
-grants](/blog/thirteenth-wave-of-bitcoin-grants), also announced in August,
-showed our commitment to those infrastructure-like software projects: Tor,
-Tails, and `ngx_L402` are all puzzle pieces to the larger freedom tech picture.
+In September we highlighted what advancements our grantees made on the ecash
+front: Cashu, CDK, Nutshell, Minibits, Nutstash, npub.cash, Hashpool, Fedimint,
+and OpenCash. We believe that Chaumian ecash has a large role to play in
+bitcoin's future, and are proud to support the people and projects who are
+pushing this technology forward.
 
-In September we highlighted what advancements our grantees made on [the ecash
-front](/blog/advancements-in-ecash): Cashu, CDK, Nutshell, Minibits, Nutstash,
-npub.cash, Hashpool, Fedimint, and OpenCash. We believe that Chaumian ecash has
-a large role to play in bitcoin's future, and are proud to support the people
-and projects who are pushing this technology forward.
-
-In October we announced the [14th wave of grants](/blog/fourteenth-wave-of-bitcoin-grants)
-from our General Fund, followed by an impact report on [Advancements in Bitcoin
-and Lightning Wallets](/blog/advancements-in-bitcoin-and-lightning-wallets). In
-November we published the [13th wave of nostr
-grants](/blog/thirteenth-wave-of-nostr-grants), and we concluded the year in
-December with the announcement of the [14th](/blog/fourteenth-wave-of-nostr-grants)
-and [15th wave](/blog/fifteenth-wave-of-bitcoin-grants) respectively, as well as
-our first impact report focusing on the nostr ecosystem: [Advancements in Nostr
-Clients](/blog/advancements-in-nostr-clients). On the last day of the year we
-announced our long-term support for [Brad
-Stachurski](/blog/brad-stachurski-receives-lts), who was the 2nd LTS recipient
-in December, following [Andrew Toth](/blog/andrew-toth-receives-lts-grant).
+In October we announced the 14th wave of grants from our General Fund, followed
+by an impact report on the Advancements in Bitcoin and Lightning Wallets. In
+November we published the 13th wave of nostr grants, and we concluded the year
+in December with the announcement of the 14th and 15th wave respectively, as
+well as our first impact report focusing on the nostr ecosystem: Advancements in
+Nostr Clients. On the last day of the year we announced our long-term support
+for Brad Stachurski, who was the 2nd LTS recipient in December, following Andrew
+Toth.
 
 ---
 
@@ -154,13 +140,20 @@ OpenSats exists because we want to see contributors to Bitcoin and free and
 open-source tools supported by a sustainable ecosystem and consistent funding.
 Our LTS program (long-term support) aims to do just that: support the best
 people for a multi-year period. Consequently, a lot of our funds are dedicated
-to our LTS grantees. In 2025, we allocated a total of \$3,993,949 to long-term
-support, up 77% from last year. That said, we allocated almost twice as much to
-regular, project-based grants with a total of \$7,094,729 (up 3% from last
-year). In total, we have now given over 350 grants since launching our grant
-program in 2023.
+to our LTS grantees. In 2025, we allocated a total of \$2,328,000 from our
+General Fund to long-term support. We allocated twice as much to non-LTS grants,
+with a total of \$5,639,789 allocated towards various project, as per our
+announcements. In total, we have now given over 350 grants since launching our
+grant program in 2023.
 
-![](/static/images/blog/2025-eoy/2025-grantee-growth.png)
+![](/static/images/blog/2025-eoy/2025-lts.png)
+
+In terms of allocation percentage, the ratio of LTS grants to regular grants is
+the same as the previous year, with a clean 30/70 split. In terms of focus areas
+the list is similar too, with an increased emphasis on developer libraries and
+ecash.
+
+![](/static/images/blog/2025-eoy/2025-focus-areas.png)
 
 As mentioned before, we are currently sending approximately \$1 million worth of
 bitcoin to our grantees each month. Thanks to the power of magic internet money
@@ -170,175 +163,17 @@ countries:
 
 <GranteeMap />
 
-<StatsSentence className="text-xl leading-8 text-gray-500 dark:text-gray-400" />
-
-Our two funds serve distinct purposes: the [General Fund](/funds/general)
-supports bitcoin-related projects and other free and open-source work that
-helps bitcoin flourish, while [The Nostr Fund](/funds/nostr) focuses
-specifically on the nostr ecosystem.
-
-In 2025, the General Fund allocated \$7,878,735 (up 43% from 2024) and The Nostr
-Fund allocated \$3,209,942 (down 12%). Across the lifetime of both programs, we
-have now sent over \$18M from the General Fund and over \$11M from The Nostr
-Fund.
-
-![](/static/images/blog/2025-eoy/2025-allocation.png)
-
-The convergence between bitcoin and nostr that we noted [last
-year](/blog/2024-year-in-review#allocation) has accelerated. Ecash projects
-like Cashu now use nostr for coordination and discovery. Wallets integrate
-nostr for social payments and contact management. Mining pools experiment with
-ecash tokens for anonymous payout mechanisms. These categories blur in practice,
-though we maintain separate funds to ensure both ecosystems receive dedicated
-support.
-
-### Bitcoin: General Fund
-
-In 2025, our General Fund grants emphasized several key areas: Bitcoin Core
-development, Silent Payments infrastructure, Lightning improvements, ecash
-tooling, mining decentralization, and developer libraries.
-
-![](/static/images/blog/2025-eoy/2025-focus-areas.png)
-
-Bitcoin Core support remained central to our allocation. Beyond the LTS grants
-for experienced contributors, we funded projects that strengthen the reference
-implementation: performance optimizations, testing infrastructure, and the
-[Great Script Restoration](/blog/eleventh-wave-of-bitcoin-grants#great-script-restoration)
-research effort exploring disabled opcodes.
-
-Silent Payments emerged as a major theme. We supported [Dana
-Wallet](/blog/fifteenth-wave-of-bitcoin-grants#dana-wallet), [BlindBit
-Suite](/blog/fifteenth-wave-of-bitcoin-grants#blindbit-suite), and the [Silent
-Payments Shepherd](/blog/thirteenth-wave-of-bitcoin-grants#silent-payments-shepherd)
-coordination project—all working to make reusable addresses practical for
-everyday use.
-
-Mining decentralization received substantial attention through grants to the
-[256 Foundation](/blog/eleventh-wave-of-bitcoin-grants#256-foundation) (open-source
-mining stack), [BitShoka](/blog/eleventh-wave-of-bitcoin-grants#bitshoka) (ASIC
-reverse engineering for BitAxe), and
-[Hashpool/Axepool](/blog/twelfth-wave-of-bitcoin-grants#hashpool-and-axepool)
-(accountless mining pools using ecash). These projects work toward a future
-where mining infrastructure is more accessible and less dependent on
-proprietary systems.
-
-On the ecash front, we continued supporting the Cashu ecosystem through grants
-for [Nutshell](/blog/advancements-in-ecash#nutshell),
-[Minibits](/blog/advancements-in-ecash#minibits-wallet),
-[Nutstash](/blog/advancements-in-ecash#nutstash), and
-[npub.cash](/blog/advancements-in-ecash#npubcash). The [OpenCash
-Association](/blog/let-a-thousand-flowers-bloom#opencash) received support to
-coordinate development and fund bounties across the ecosystem.
-
-Developer libraries and tooling continued to mature. Our [impact report on
-developer libraries](/blog/advancements-in-developer-libraries) detailed
-progress across BDK, rust-bitcoin, secp256k1, DLC Dev Kit, Payjoin Dev Kit, and
-lnprototest—all foundational projects that other developers build upon.
-
-We also maintained our commitment to privacy infrastructure, including ongoing
-support for projects like [KMP-Tor](/blog/thirteenth-wave-of-bitcoin-grants#kmp-tor)
-and operating system diversity through
-[FreeBSD](/blog/fifteenth-wave-of-bitcoin-grants#freebsd).
-
-You can read more about these projects in our grant announcements from
-[January](/blog/more-for-core),
-[January](/blog/ninth-wave-of-bitcoin-grants),
-[March](/blog/tenth-wave-of-bitcoin-grants),
-[May](/blog/eleventh-wave-of-bitcoin-grants),
-[July](/blog/twelfth-wave-of-bitcoin-grants),
-[August](/blog/thirteenth-wave-of-bitcoin-grants),
-[October](/blog/fourteenth-wave-of-bitcoin-grants), and
-[December](/blog/fifteenth-wave-of-bitcoin-grants).
-
-### Nostr: The Nostr Fund
-
-The Nostr Fund kept growing. We funded clients, but also infrastructure,
-tooling, and some weird stuff nobody expected.
-
-Our [nostr clients impact report](/blog/advancements-in-nostr-clients)
-highlighted major advances: Amethyst's transition to the outbox model (enabling
-connections to 1,000+ relays while preserving mobile performance), Coracle's
-relay membership controls, Damus's Android launch and Notedeck development,
-and Zap.stream's mobile live streaming apps.
-
-Key management saw progress through
-[Frostr](/blog/twelfth-wave-of-nostr-grants#frostr) (threshold signing using
-FROST) and [Aegis](/blog/twelfth-wave-of-nostr-grants#aegis) (cross-platform
-signer). These projects address the challenge of securing nostr identities
-without sacrificing usability.
-
-Decentralized collaboration advanced through
-[Gitplaza](/blog/twelfth-wave-of-nostr-grants#gitplaza) and
-[Grasp](/blog/thirteenth-wave-of-nostr-grants#grasp)—both working toward
-nostr-native alternatives to centralized code hosting. The Nostr Double Ratchet
-project brought Signal-style end-to-end encryption to nostr messaging.
-
-Some of the most creative projects pushed nostr into unexpected territory:
-[HAMSTR](/blog/eleventh-wave-of-nostr-grants#hamstr) enables nostr
-communication over ham radio for off-grid and censorship-resistant
-messaging. [Nostr Game Engine](/blog/eleventh-wave-of-nostr-grants#nostr-game-engine)
-provides game developers with nostr-native infrastructure. [Atomic Signature
-Swaps](/blog/twelfth-wave-of-nostr-grants#atomic-signature-swaps) enables
-trustless exchange of Schnorr signatures between nostr, bitcoin, and Cashu.
-
-Long-term support grantees—including
-[fiatjaf](/blog/fiatjaf-receives-lts-grant),
-[Vitor Pamplona](/blog/vitor-pamplona-receives-lts-grant),
-[Hodlbod](/blog/hodlbod-receives-lts-grant),
-[Kieran](/blog/kieran-receives-lts-grant), and
-[hzrd149](/blog/hzrd149-receives-lts-grant)—continued their foundational work
-on protocol development, client infrastructure, and ecosystem tooling. The
-addition of [SnowCait](/blog/snowcait-receives-lts-grant) in June strengthened
-our support for Japanese nostr development.
-
-You can read more about these projects in our grant announcements from
-[March](/blog/10th-wave-of-nostr-grants),
-[April](/blog/eleventh-wave-of-nostr-grants),
-[July](/blog/twelfth-wave-of-nostr-grants),
-[November](/blog/thirteenth-wave-of-nostr-grants), and
-[December](/blog/fourteenth-wave-of-nostr-grants).
-
 ---
 
 ## Donations
 
 > Is there anything we could help with?
 
-2025 was a good year for donations. Individuals and organizations both showed up.
-
-The [Human Rights Foundation](/blog/additional-ops-budget-from-hrf) contributed
-\$250,000 to our Operations Budget, allowing us to maintain the organizational
-infrastructure that makes our grant-giving possible. The [Reynolds
-Foundation](/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation)
-followed up their 2024 gift with an additional \$2,000,000 donation to our
-General Fund.
-
-In October, [Tether](/blog/opensats-receives-dollar250k-donation-from-tether)
-donated \$250,000, and [StarkWare together with the Starknet
-Foundation](/blog/opensats-receives-dollar400k-donation-from-starkware-starknet)
-contributed \$400,000—both directed to our General Fund. Bitcoin's open-source
-foundation needs sustained investment, and these donors stepped up.
-
-We also received our first bitcoin-denominated recurring commitment when [Steak
-'n Shake](/blog/opensats-receives-donation-commitment-from-steak-n-shake)
-announced they would donate 210 sats from every Bitcoin Meal sold over the
-next twelve months. We hope other companies follow their lead.
-
-In terms of individual donations, bitcoin payment rails continue to dominate.
-The ratio of Lightning to on-chain payments remained steady at approximately
-70% Lightning. The vast majority of donations continue to flow to our [General
-Fund](/funds/general), with the remainder split between [The Nostr
-Fund](/funds/nostr) and our [Operations Budget](/funds/ops).
-
 [![](/static/images/blog/2025-eoy/2025-recurring-donations.png)](https://adtjkuks.donorsupport.co/page/opensats)
 
 <center>
   <DonateRecurringButton />
 </center>
-
-100% of donations to our General Fund and The Nostr Fund go directly to
-grantees. Our operations are funded separately. When you donate, your money
-reaches developers.
 
 ---
 
@@ -358,59 +193,3 @@ offer long-term support for load-bearing internet people, providing at least
 some stability in an otherwise uncertain world. We want to stay true to our
 principles, which means not taking a cut from donations to our funds, raising
 funding for our operational budget separately.
-
-Bitcoin continues to mature as both technology and asset. Silent Payments
-infrastructure is moving from specification to production. Ecash protocols are
-gaining real users and merchant adoption. Mining decentralization efforts are
-producing open hardware and accountless pool designs. The projects we support
-are building the foundation for bitcoin's next decade.
-
-Nostr has established itself as viable infrastructure for censorship-resistant
-communication. The outbox model is proving that decentralized social networks
-can work at scale. Clients are shipping features that rival centralized
-platforms while preserving user control. The integration between nostr, bitcoin,
-and ecash creates new possibilities for value transfer and identity that
-didn't exist a year ago.
-
-What needs funding in 2026?
-
-**Protocol research and implementation.** Projects like LNHANCE are exploring
-covenant constructions that could enable new types of channels and vaults.
-Silent Payments tooling needs to reach maturity across major wallets. Ecash
-protocols require ongoing standardization and security review.
-
-**Infrastructure maintenance.** Developer libraries like BDK, rust-bitcoin, and
-the various nostr SDKs underpin hundreds of applications. These projects need
-sustained support for maintenance, security fixes, and compatibility updates.
-
-**Developer onboarding.** Programs like Summer of Bitcoin, Bitcoin Dev
-Launchpad, and Bitshala are training the next generation of contributors.
-Education initiatives in underserved regions expand bitcoin's reach and
-strengthen its resilience through geographic diversity.
-
-**Ecosystem building.** The organizations we funded through "Let a Thousand
-Flowers Bloom" are establishing funding infrastructure in new jurisdictions and
-domains. We hope to see more nonprofits emerge to support open-source
-development—the ecosystem benefits from multiple funding sources with different
-focuses and perspectives.
-
-Our goal remains the same: maintain a sustainable ecosystem of funding for free
-and open-source projects. We rely on donations to fund our operations and the
-projects we support. If you believe in what we're doing, please consider
-supporting us:
-
-<center>
-  <DonateRecurringButton />
-</center>
-
-We are grateful to everyone who contributed to OpenSats in 2025—whether through
-donations, volunteer time, or simply spreading the word. Our grantees produced
-meaningful work this year: code merged, protocols shipped, and users served.
-This progress happens because people choose to support open-source development.
-
-To our donors: thank you for making this possible. To our grantees: thank you
-for the work you do. To everyone building, learning, and using freedom tech:
-you are what makes this ecosystem worth supporting.
-
-Here's to 2026. Onwards.
-
