feat(blog): add links to announcements section
Link all referenced blog posts, impact reports, grant waves, and LTS
announcements in the Announcements section without changing the text.

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -83,52 +83,64 @@ support as many grantees as we support if there's sats in our vaults.
 We announce all our grants publicly on our blog, along with our initiatives and
 noteworthy donations. Looking at the announcements made in 2025 one should get a
 pretty good idea of what we've been up to: In January 2025 we've announced
-additional grants for bitcoin core contributors, followed by a wave of bitcoin
-grants announced shortly after. In February we published our first impact
-report: Advancements in On-Chain Privacy. In March we announced the 10th wave of
-grants from the General Fund as well as the 10th wave of grants from The Nostr
-Fund. We also published "Let a Thousand Flowers Bloom", outlining our thesis on
-how to best scale OpenSats horizontally.
+[additional grants for bitcoin core contributors](/blog/more-for-core), followed
+by a [wave of bitcoin grants](/blog/ninth-wave-of-bitcoin-grants) announced
+shortly after. In February we published our first impact report: [Advancements
+in On-Chain Privacy](/blog/developing-advancements-in-onchain-privacy). In March
+we announced the [10th wave of grants](/blog/tenth-wave-of-bitcoin-grants) from
+the General Fund as well as the [10th wave of grants](/blog/10th-wave-of-nostr-grants)
+from The Nostr Fund. We also published "[Let a Thousand Flowers
+Bloom](/blog/let-a-thousand-flowers-bloom)," outlining our thesis on how to best
+scale OpenSats horizontally.
 
-In April we announced our 4th wave of education grants, followed by another wave
-of nostr grants and our next impact report: Advancements in Lightning
-Infrastructure. In May we announced yet another wave of grants (and grant
-renewals) from our General Fund.
+In April we announced our [4th wave of education
+grants](/blog/fourth-wave-of-education-grants), followed by [another wave of
+nostr grants](/blog/eleventh-wave-of-nostr-grants) and our next impact report:
+[Advancements in Lightning Infrastructure](/blog/advancements-in-lightning-infrastructure).
+In May we announced yet [another wave of grants](/blog/eleventh-wave-of-bitcoin-grants)
+(and grant renewals) from our General Fund.
 
-June marked the release of our third impact report, Advancements in Developer
-Training, highlighting progress of some of the developer-focused education
-initiatives we fund. Summer of Bitcoin, Africa Free Routing, Bitcoin Dev
-Launchpad, and Bitshala. We also announced our long-term support for SnowCait, a
-prolific nostr developer. In July we announced the 12th wave of grants from the
-General Fund as well as the Nostr Fund, respectively.
+June marked the release of our third impact report, [Advancements in Developer
+Training](/blog/advancements-in-developer-training), highlighting progress of
+some of the developer-focused education initiatives we fund. Summer of Bitcoin,
+Africa Free Routing, Bitcoin Dev Launchpad, and Bitshala. We also announced our
+long-term support for [SnowCait](/blog/snowcait-receives-lts-grant), a prolific
+nostr developer. In July we announced the [12th wave of
+grants](/blog/twelfth-wave-of-bitcoin-grants) from the General Fund as well as
+[the Nostr Fund](/blog/twelfth-wave-of-nostr-grants), respectively.
 
-In August we published yet another impact report: Advancements in Developer
-Libraries. We fund a lot of projects that are by their very nature invisible to
-the end-user. Software development kits and libraries that a myriad of projects
-depend upon. BDK, `rust-bitcoin`, Payjoin Dev Kit, DLC Dev Kit, libraries
-focused on `secp256k1`, and many others. Developing and maintaining these
-libraries is hard and often thankless, but paramount to a flourishing bitcoin
-ecosystem. As one of our grantees Tobin Harding succinctly put it: "My job is to
-provide libraries so other devs can create software that users love. If no one
-ever mentions rust-bitcoin while simultaneously using it every day, then we
-win." Our 13th wave of grants, also announced in August, showed our commitment
-to those infrastructure-like software projects: Tor, DTails, and `ngx_L402` are
-all puzzle pieces to the larger freedom tech picture.
+In August we published yet another impact report: [Advancements in Developer
+Libraries](/blog/advancements-in-developer-libraries). We fund a lot of projects
+that are by their very nature invisible to the end-user. Software development
+kits and libraries that a myriad of projects depend upon. BDK, `rust-bitcoin`,
+Payjoin Dev Kit, DLC Dev Kit, libraries focused on `secp256k1`, and many others.
+Developing and maintaining these libraries is hard and often thankless, but
+paramount to a flourishing bitcoin ecosystem. As one of our grantees Tobin
+Harding succinctly put it: "My job is to provide libraries so other devs can
+create software that users love. If no one ever mentions rust-bitcoin while
+simultaneously using it every day, then we win." Our [13th wave of
+grants](/blog/thirteenth-wave-of-bitcoin-grants), also announced in August,
+showed our commitment to those infrastructure-like software projects: Tor,
+DTails, and `ngx_L402` are all puzzle pieces to the larger freedom tech picture.
 
-In September we highlighted what advancements our grantees made on the ecash
-front: Cashu, CDK, Nutshell, Minibits, Nutstash, npub.cash, Hashpool, Fedimint,
-and OpenCash. We believe that Chaumian ecash has a large role to play in
-bitcoin's future, and are proud to support the people and projects who are
-pushing this technology forward.
+In September we highlighted what [advancements our grantees made on the ecash
+front](/blog/advancements-in-ecash): Cashu, CDK, Nutshell, Minibits, Nutstash,
+npub.cash, Hashpool, Fedimint, and OpenCash. We believe that Chaumian ecash has
+a large role to play in bitcoin's future, and are proud to support the people
+and projects who are pushing this technology forward.
 
-In October we announced the 14th wave of grants from our General Fund, followed
-by an impact report on the Advancements in Bitcoin and Lightning Wallets. In
-November we published the 13th wave of nostr grants, and we concluded the year
-in December with the announcement of the 14th and 15th wave respectively, as
-well as our first impact report focusing on the nostr ecosystem: Advancements in
-Nostr Clients. On the last day of the year we announced our long-term support
-for Brad Stachurski, who was the 2nd LTS recipient in December, following Andrew
-Toth.
+In October we announced the [14th wave of grants](/blog/fourteenth-wave-of-bitcoin-grants)
+from our General Fund, followed by an impact report on the [Advancements in
+Bitcoin and Lightning Wallets](/blog/advancements-in-bitcoin-and-lightning-wallets).
+In November we published the [13th wave of nostr
+grants](/blog/thirteenth-wave-of-nostr-grants), and we concluded the year in
+December with the announcement of the [14th](/blog/fourteenth-wave-of-nostr-grants)
+and [15th wave](/blog/fifteenth-wave-of-bitcoin-grants) respectively, as well as
+our first impact report focusing on the nostr ecosystem: [Advancements in Nostr
+Clients](/blog/advancements-in-nostr-clients). On the last day of the year we
+announced our long-term support for [Brad
+Stachurski](/blog/brad-stachurski-receives-lts), who was the 2nd LTS recipient
+in December, following [Andrew Toth](/blog/andrew-toth-receives-lts-grant).
 
 ---
 
