--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -181,7 +181,35 @@ countries:
 
 > Is there anything we could help with?
 
+The answer to this question is simple: yes. We need more donors, preferably
+recurring ones. Why? Because recurring donations allow us to plan ahead and
+commit to our grantees for longer. Multi-year commitments are even better. The
+more predictable our income, the more predictable our grants.
+
+We are grateful to those who have made multi-year commitments. [The Reynolds
+Foundation](/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation)
+followed up their 2024 gift with an additional \$2,000,000 donation to our
+General Fund. The [Human Rights Foundation](/blog/additional-ops-budget-from-hrf)
+contributed \$250,000 to our Operations Budget, allowing us to maintain the
+organizational infrastructure that makes our grant-giving possible.
+
+In October, [Tether](/blog/opensats-receives-dollar250k-donation-from-tether)
+donated \$250,000, and [StarkWare together with the Starknet
+Foundation](/blog/opensats-receives-dollar400k-donation-from-starkware-starknet)
+contributed \$400,000—both directed to our General Fund. Chaincode Labs
+contributed \$150,000, and BitMart donated \$10,000. We also received our first
+bitcoin-denominated recurring commitment when [Steak 'n
+Shake](/blog/opensats-receives-donation-commitment-from-steak-n-shake) announced
+they would donate 210 sats from every Bitcoin Meal sold over the next twelve
+months. We hope other companies follow their lead.
+
 [![](/static/images/blog/2025-eoy/2025-recurring-donations.png)](https://adtjkuks.donorsupport.co/page/opensats)
+
+The vast majority of donations continue to flow to our [General
+Fund](/funds/general), with the remainder split between [The Nostr
+Fund](/funds/nostr) and our [Operations Budget](/funds/ops). 100% of donations
+to our General Fund and The Nostr Fund go directly to grantees. Our operations
+are funded separately. When you donate, your money reaches developers.
 
 <center>
   <DonateRecurringButton />
